[gd_scene load_steps=8 format=3 uid="uid://b05ror2ya1o1c"]

[ext_resource type="Script" path="res://ui/start_page/start_page.gd" id="1_j63th"]
[ext_resource type="Theme" uid="uid://csxyvlp48nu33" path="res://ui/start_page/start_page_theme.tres" id="2_n5ykn"]
[ext_resource type="FontFile" uid="uid://eqxg4yne6tug" path="res://fonts/Pixelify_Sans/static/PixelifySans-Bold.ttf" id="2_v6bb5"]
[ext_resource type="Texture2D" uid="uid://dqbelg31ec00b" path="res://entities/tracks/assets/race_track_asset_pack_2/Levels/Summer_details (16 x 16).png" id="3_vlcgn"]
[ext_resource type="Texture2D" uid="uid://bcus2p5rbt2ks" path="res://entities/tracks/assets/race_track_asset_pack_2/Levels/Desert_details (16 x 16).png" id="4_jrek1"]
[ext_resource type="Texture2D" uid="uid://dhoujntmy6yfe" path="res://entities/tracks/assets/race_track_asset_pack_2/Levels/Winter_details (16 x 16).png" id="5_2rw3u"]

[sub_resource type="LabelSettings" id="LabelSettings_80yea"]
font = ExtResource("2_v6bb5")
font_size = 72
font_color = Color(0.107076, 0.764958, 0.466312, 1)
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[node name="StartPage" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 647.0
theme = ExtResource("2_n5ykn")
script = ExtResource("1_j63th")

[node name="VectorModeButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 158.0
offset_top = 207.0
offset_right = 430.0
offset_bottom = 270.0

[node name="NumPlayersButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 285.0
offset_right = 432.0
offset_bottom = 348.0

[node name="InputMethodButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 367.0
offset_right = 432.0
offset_bottom = 430.0

[node name="LevelButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 725.0
offset_top = 201.0
offset_right = 997.0
offset_bottom = 264.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
alignment = 1
icon_alignment = 1
expand_icon = true
item_count = 3
popup/item_0/text = "SPRING"
popup/item_0/icon = ExtResource("3_vlcgn")
popup/item_1/text = "SUMMER"
popup/item_1/icon = ExtResource("4_jrek1")
popup/item_1/id = 1
popup/item_2/text = "WINTER"
popup/item_2/icon = ExtResource("5_2rw3u")
popup/item_2/id = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.5
offset_top = 30.0
offset_right = 155.5
offset_bottom = 85.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.540877, 0.723193, 0.447543, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "VECTOR RACING"
label_settings = SubResource("LabelSettings_80yea")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -98.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "START"

[node name="HelpButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "HELP"

[node name="LeaderboardButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Leaderboard"
